--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -48,326 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b25e49c1-58c1-450a-8e08-b2b490e74e28",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>bdate</th>\n",
-       "      <th>bprice</th>\n",
-       "      <th>sdate</th>\n",
-       "      <th>sprice</th>\n",
-       "      <th>pct_return</th>\n",
-       "      <th>sell_descr</th>\n",
-       "      <th>overlap</th>\n",
-       "      <th>param_id</th>\n",
-       "      <th>days_open</th>\n",
-       "      <th>strategy</th>\n",
-       "      <th>rsi</th>\n",
-       "      <th>sma</th>\n",
-       "      <th>sma20</th>\n",
-       "      <th>atr</th>\n",
-       "      <th>roc</th>\n",
-       "      <th>adx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2011-03-17</td>\n",
-       "      <td>25.02</td>\n",
-       "      <td>2011-03-22</td>\n",
-       "      <td>25.36</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>3</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>31.36</td>\n",
-       "      <td>20.67</td>\n",
-       "      <td>22.09</td>\n",
-       "      <td>4.09</td>\n",
-       "      <td>-4.26</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2012-05-17</td>\n",
-       "      <td>28.17</td>\n",
-       "      <td>2012-05-22</td>\n",
-       "      <td>28.24</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>3</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>18.54</td>\n",
-       "      <td>23.65</td>\n",
-       "      <td>25.13</td>\n",
-       "      <td>4.13</td>\n",
-       "      <td>-7.32</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2014-12-17</td>\n",
-       "      <td>39.95</td>\n",
-       "      <td>2014-12-18</td>\n",
-       "      <td>41.30</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>1</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>40.52</td>\n",
-       "      <td>35.58</td>\n",
-       "      <td>37.53</td>\n",
-       "      <td>4.23</td>\n",
-       "      <td>-3.40</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2016-05-02</td>\n",
-       "      <td>42.22</td>\n",
-       "      <td>2016-05-09</td>\n",
-       "      <td>42.27</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>5</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>31.26</td>\n",
-       "      <td>39.17</td>\n",
-       "      <td>40.68</td>\n",
-       "      <td>3.23</td>\n",
-       "      <td>-4.65</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2018-03-26</td>\n",
-       "      <td>65.59</td>\n",
-       "      <td>2018-03-27</td>\n",
-       "      <td>67.13</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>1</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>44.10</td>\n",
-       "      <td>60.74</td>\n",
-       "      <td>65.50</td>\n",
-       "      <td>3.46</td>\n",
-       "      <td>-3.28</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2019-05-14</td>\n",
-       "      <td>73.68</td>\n",
-       "      <td>2019-05-16</td>\n",
-       "      <td>75.35</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>34.40</td>\n",
-       "      <td>67.53</td>\n",
-       "      <td>75.42</td>\n",
-       "      <td>2.43</td>\n",
-       "      <td>-5.18</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2019-06-04</td>\n",
-       "      <td>71.53</td>\n",
-       "      <td>2019-06-05</td>\n",
-       "      <td>73.96</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>1</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>44.27</td>\n",
-       "      <td>67.88</td>\n",
-       "      <td>72.23</td>\n",
-       "      <td>2.45</td>\n",
-       "      <td>-3.95</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2019-08-06</td>\n",
-       "      <td>76.77</td>\n",
-       "      <td>2019-08-08</td>\n",
-       "      <td>78.11</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>32.17</td>\n",
-       "      <td>71.82</td>\n",
-       "      <td>78.88</td>\n",
-       "      <td>2.43</td>\n",
-       "      <td>-4.56</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2020-02-28</td>\n",
-       "      <td>84.21</td>\n",
-       "      <td>2020-03-03</td>\n",
-       "      <td>94.01</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>rsi_xunder</td>\n",
-       "      <td>24.08</td>\n",
-       "      <td>85.06</td>\n",
-       "      <td>96.34</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>-12.24</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2012-05-22</td>\n",
-       "      <td>28.24</td>\n",
-       "      <td>2012-05-23</td>\n",
-       "      <td>27.85</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>1</td>\n",
-       "      <td>rsi_xover</td>\n",
-       "      <td>37.28</td>\n",
-       "      <td>23.69</td>\n",
-       "      <td>24.98</td>\n",
-       "      <td>4.14</td>\n",
-       "      <td>-3.47</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>XLK</td>\n",
-       "      <td>2018-10-15</td>\n",
-       "      <td>70.57</td>\n",
-       "      <td>2018-10-17</td>\n",
-       "      <td>71.86</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>rsi_xover</td>\n",
-       "      <td>34.31</td>\n",
-       "      <td>68.07</td>\n",
-       "      <td>71.13</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>-7.17</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   symbol      bdate  bprice      sdate  sprice  pct_return sell_descr  \\\n",
-       "0     XLK 2011-03-17   25.02 2011-03-22   25.36        0.01   rsi_exit   \n",
-       "1     XLK 2012-05-17   28.17 2012-05-22   28.24        0.00   rsi_exit   \n",
-       "2     XLK 2014-12-17   39.95 2014-12-18   41.30        0.03   rsi_exit   \n",
-       "3     XLK 2016-05-02   42.22 2016-05-09   42.27        0.00   rsi_exit   \n",
-       "4     XLK 2018-03-26   65.59 2018-03-27   67.13        0.02   rsi_exit   \n",
-       "5     XLK 2019-05-14   73.68 2019-05-16   75.35        0.02   rsi_exit   \n",
-       "6     XLK 2019-06-04   71.53 2019-06-05   73.96        0.03   rsi_exit   \n",
-       "7     XLK 2019-08-06   76.77 2019-08-08   78.11        0.02   rsi_exit   \n",
-       "8     XLK 2020-02-28   84.21 2020-03-03   94.01        0.12   rsi_exit   \n",
-       "9     XLK 2012-05-22   28.24 2012-05-23   27.85       -0.01   rsi_exit   \n",
-       "10    XLK 2018-10-15   70.57 2018-10-17   71.86        0.02   rsi_exit   \n",
-       "\n",
-       "    overlap  param_id  days_open    strategy   rsi   sma  sma20  atr    roc  \\\n",
-       "0         0      1322          3  rsi_xunder 31.36 20.67  22.09 4.09  -4.26   \n",
-       "1         0      1322          3  rsi_xunder 18.54 23.65  25.13 4.13  -7.32   \n",
-       "2         0      1322          1  rsi_xunder 40.52 35.58  37.53 4.23  -3.40   \n",
-       "3         0      1322          5  rsi_xunder 31.26 39.17  40.68 3.23  -4.65   \n",
-       "4         0      1322          1  rsi_xunder 44.10 60.74  65.50 3.46  -3.28   \n",
-       "5         0      1322          2  rsi_xunder 34.40 67.53  75.42 2.43  -5.18   \n",
-       "6         0      1322          1  rsi_xunder 44.27 67.88  72.23 2.45  -3.95   \n",
-       "7         0      1322          2  rsi_xunder 32.17 71.82  78.88 2.43  -4.56   \n",
-       "8         0      1322          2  rsi_xunder 24.08 85.06  96.34 3.08 -12.24   \n",
-       "9         1      1322          1   rsi_xover 37.28 23.69  24.98 4.14  -3.47   \n",
-       "10        0      1322          2   rsi_xover 34.31 68.07  71.13 3.07  -7.17   \n",
-       "\n",
-       "    adx  \n",
-       "0  0.00  \n",
-       "1  0.00  \n",
-       "2  0.00  \n",
-       "3  0.00  \n",
-       "4  0.00  \n",
-       "5  0.00  \n",
-       "6  0.00  \n",
-       "7  0.00  \n",
-       "8  0.00  \n",
-       "9  0.00  \n",
-       "10 0.00  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#%run rsi_momo.py\n",
+    "%run -n  rsi_momo\n",
     "#configs = enumerate_params()\n",
-    "params = [{'rsi_entry': 25, 'rsi_exit': 35, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1322 }]\n",
-    "symbol = 'XLK'\n",
+    "params = [{'rsi_entry': 35, 'rsi_exit': 40, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 16, 'id': 893, 'trade_overlap': 9577, 'trades': 25590, 'results': 'results/trades.893.csv.gz'},\n",
+    "        {'rsi_entry': 35, 'rsi_exit': 45, 'sma_period': 200, 'stop_loss_pct': 10, 'max_trade_days': 4, 'id': 959},\n",
+    "        {'rsi_entry': 25, 'rsi_exit': 35, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1322 },\n",
+    "        ]\n",
+    "symbol = 'ZION'\n",
     "udf = {symbol: load_symbol(symbol)}\n",
     "uberdf_enrich(udf,params)\n",
     "df = rsi_momo_strategy(symbol, udf[symbol], params[0])\n",
@@ -376,14 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "7b514006-f22d-43ab-b9eb-f0b215d47c44",
+   "execution_count": null,
+   "id": "4cde6463-c320-400b-940b-a2a038706b61",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "symbol = 'XLK'\n",
-    "df = load_symbol(symbol)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
