--- a/Strategy.MonthlyDogs.ipynb
+++ b/Strategy.MonthlyDogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 88,
    "id": "134e32d3-d41b-49e5-9b7b-5863ea524051",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 89,
    "id": "fbd434ec-32e6-4af0-9d53-4a7e39c65502",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "[4173 rows x 505 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,10 +540,21 @@
     }
    ],
    "source": [
+    "def monthly_qtile(monthly_rets, bins):\n",
+    "    monthly_rets = monthly_rets.dropna()\n",
+    "    monthly_qtiles = monthly_rets.apply(lambda x: pd.qcut(x, bins, labels=False, duplicates='drop'), axis=1)\n",
+    "    returns = {}\n",
+    "    for i in range(0,bins):\n",
+    "        matrix = monthly_qtiles.applymap(lambda x: 1 if (x == i) else 0)\n",
+    "        bin_rets = pd.DataFrame(monthly_rets.values * matrix.values, columns=matrix.columns, index=matrix.index).apply(np.mean, axis=1)\n",
+    "        returns[i] = bin_rets\n",
+    "    return pd.DataFrame(returns)\n",
+    "\n",
+    "\n",
     "def cook_qtile_df(formation_dt, bins, monthly_rets):\n",
-    "    df = monthly_rets.loc[formation_dt - MonthEnd(1)].copy()\n",
-    "    df.name = 'returns'\n",
-    "    df = pd.DataFrame(df)\n",
+    "    s = monthly_rets.loc[formation_dt - MonthEnd(1)].copy()\n",
+    "    s.name = 'returns'\n",
+    "    df = pd.DataFrame(s)\n",
     "    df['qtile'] = pd.qcut(df.returns, bins, labels=False, duplicates='drop')\n",
     "    qdf.groupby('qtile').returns.mean()\n",
     "    #for i in range(0, qdf.qtile.max()+1): print (f'{i:02d} mean: {qdf[qdf.qtile == i].returns.mean():+03.2%}')\n",
